--- a/author.html
+++ b/author.html
@@ -14,44 +14,38 @@
 	<link rel="icon" type="image/png" href="icons/1/256.png" sizes="256x256">
 	<link rel="icon" type="image/png" href="icons/1/512.png" sizes="512x512">
 	<style>
-	  .navbar {
-		border-bottom-style: ridge;
-	    border-bottom-width: 2px;
-	    border-bottom-color: deepskyblue;
-	  }
-	  .copybar {
-		border-top-style: ridge;
-		border-top-width: 2px;
-		border-top-color: deepskyblue;
-	  }
+	  body {background-image: linear-gradient(90deg, deepskyblue, skyblue, skyblue, skyblue, deepskyblue)}
+	  .navbar {border-bottom-style: ridge; border-bottom-width: 2px; border-bottom-color: deepskyblue}
+	  .navbar-brand-text, .copybar-logo {background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
+            -webkit-text-fill-color: transparent; background-clip: unset; -webkit-background-clip: text}
+	  .navbar-toggler {background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue)}
+	  .copybar {border-top-style: ridge; border-top-width: 2px; border-top-color: deepskyblue}
 	</style>
-  </head>
-  <body style="background-image: linear-gradient(90deg, deepskyblue, skyblue, skyblue, skyblue, deepskyblue)">
-	<header>
-	  <nav class="navbar fixed-top navbar-dark bg-dark">
-	    <div class="container-fluid">
-	  	  <a class="navbar-brand" href="/">
-		    <img src="icons/1/32.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
-		    <b style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
-            -webkit-text-fill-color: transparent; -webkit-background-clip: text;">a.kak.si</b>
-		  </a>
-		  <button class="navbar-toggler" style="background-image: linear-gradient(-25deg, deepskyblue, skyblue, deepskyblue);"
-		  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-		  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-			  <a class="nav-link active" aria-current="page" href="/author">About Author</a>
-			  <a class="nav-link" href="/projects">Projects</a>
-			  <a class="nav-link" href="#">#</a>
-			  <a class="nav-link"></a>
-		    </div>
-		  </div>
-	    </div>
-	  </nav>
-	</header>
-    <main>
+   </head>
+   <body>
+	 <header>
+	   <nav class="navbar fixed-top navbar-dark bg-dark">
+		 <div class="container-fluid">
+			 <a class="navbar-brand" href="/">
+			 <img src="icons/1/64.png" alt="Ma" width="32" height="32" class="d-inline-block align-text-top">
+			 <b class="navbar-brand-text">.kak.si</b>
+		   </a>
+		   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+		   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			 <span class="navbar-toggler-icon"></span>
+		   </button>
+		   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			 <div class="navbar-nav">
+			   <a class="nav-link" href="/author">About Author</a>
+			   <a class="nav-link" href="/projects">Projects</a>
+			   <a class="nav-link" href="#">#</a>
+			   <a class="nav-link"></a>
+			 </div>
+		   </div>
+		 </div>
+	   </nav>
+	 </header>
+	 <main>
 	  <title>Ma.kak.si Author</title>
 	  <div class="row g-0" style="width: 80%; margin-left: 10%; padding-top: 6.5em; padding-bottom: 6.5em">
 		<div class="col-md-6">Mapagmataas</div>
@@ -60,10 +54,8 @@
     </main>
     <footer class="copybar fixed-bottom text-center text-lg-start bg-dark">
 	  <div class="text-center p-3">
-	    <a style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
-		-webkit-text-fill-color: transparent; -webkit-background-clip: text;">Made with:</a>
-	    <a style="background: linear-gradient(-25deg, deepskyblue, skyblue, skyblue, deepskyblue);
-		-webkit-text-fill-color: transparent; -webkit-background-clip: text" href="https://pages.github.com/">Github Pages</a>
+	    <a class="copybar-logo" href="https://pages.github.com/">Made with:</a>
+	    <a class="copybar-logo" href="https://pages.github.com/">Github Pages</a>
 	  </div>
     </footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
