--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="src/css/index.css">
     <script src="src/js/index.js"></script>
 </head>
-<body onmouseup="stopMoving()">
+<body class="noselect" onmouseup="stopMoving()">
     <div id="main">
         <div id="hero"></div>
         <div id="dpad">
