--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="noselect">
     <div id="log-menu">
-        <form action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
+        <form id="log-form" action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
             <div id="log_res-container"><p id="log_res-text">Log in or register:</p></div>
             <input type="text" placeholder="  Username   (3 - 8)" name="uname" id="uname" minlength="3" maxlength="8" required>
             <input type="password" placeholder="  Password    (3 - 8)" name="upass" id="upass" minlength="3" maxlength="8" required>
