--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="src/css/index.css">
     <script src="src/js/index.js"></script>
 </head>
-<body class="noselect">
+<body>
+    <div id="nav-cont">
+        
+    </div>
     <div id="log-menu">
         <form id="log-form" action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
             <div id="log_res-container"><p id="log_res-text">Log in or register:</p></div>
