--- a/lobby.html
+++ b/lobby.html
@@ -16,6 +16,9 @@
     <script src="src/js/game.js"></script>
 </head>
 <body class="noselect">
+    <div id="nav-cont">
+        
+    </div>
     <div id="log-menu">
         <form id="log-form" action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
             <div id="log_res-container"><p id="log_res-text">Log in or register:</p></div>
