--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
     <div id="nav-cont">
-
+        <div onclick="location.href = 'https://ma.kak.si';">
+            <img src="src/img/icon/512.png" alt="icon">
+        </div>
     </div>
     <div id="log-menu">
         <form id="log-form" action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
