--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="black-bg" style="display: none; opacity: 1; margin-top: none;">
-        <form id="log-form" action="javascript:;" onsubmit="db_log(this.uname.value, this.upass.value)">
+        <form id="log-form" action="javascript:;" onsubmit="db.log(this.uname.value, this.upass.value)">
             <div id="log_res-container"><p id="log_res-text">Log in or register:</p></div>
             <input type="text" placeholder="Username   (3 - 8)" name="uname" id="uname" minlength="3" maxlength="8" required>
             <input type="password" placeholder="Password   (3 - 8)" name="upass" id="upass" minlength="3" maxlength="8" required>
