--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </div>
     </div>
     <ul id="dropdown-menu" style="display: none;">
-        <li class="dropdown-item" data-translate>Item 1</li>
-        <li class="dropdown-item" data-translate>Item 2</li>
-        <li class="dropdown-item" data-translate>Item 3</li>
-        <li class="dropdown-item" data-translate>Item 4</li>
-        <li class="dropdown-item" data-translate>Item 5</li>
-        <li class="dropdown-item" data-translate>Item 6</li>
+        <li class="dropdown-item" onclick="location.href='author.html'" data-translate>Author</li>
+        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 2</li>
+        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 3</li>
+        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 4</li>
+        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 5</li>
+        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 6</li>
     </ul>
     <title data-translate>ma.kak.si</title>
-    
+
     <script src="src/bundle.js"></script>
     <script src="src/main.js"></script>
 </body>
