--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="nav">
-        <a href="index.html">
+        <a href="/">
             <img src="src/img/icon.png" alt="icon">
             <p data-translate>.kak.si</p>
         </a>
@@ -26,12 +26,12 @@
         </div>
     </div>
     <ul id="dropdown-menu" style="display: none;">
-        <li class="dropdown-item" onclick="location.href='author.html'" data-translate>Author</li>
-        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 2</li>
-        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 3</li>
-        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 4</li>
-        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 5</li>
-        <li class="dropdown-item" onclick="location.href='index.html'" data-translate>Item 6</li>
+        <li class="dropdown-item" onclick="location.href='/author'" data-translate>Author</li>
+        <li class="dropdown-item" onclick="location.href='/'" data-translate>Item 2</li>
+        <li class="dropdown-item" onclick="location.href='/'" data-translate>Item 3</li>
+        <li class="dropdown-item" onclick="location.href='/'" data-translate>Item 4</li>
+        <li class="dropdown-item" onclick="location.href='/'" data-translate>Item 5</li>
+        <li class="dropdown-item" onclick="location.href='/'" data-translate>Item 6</li>
     </ul>
     <title data-translate>ma.kak.si</title>
 
