--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <p>ma.</p>
       <p id="current-page" class="link"></p>
     </div>
-    <div onclick="">
+    <div>
       <i class="material-icons spinner link">
         settings
       </i>
     </div>
   </div>
-  <div id="navigation" style="display: block;">
+  <div id="navigation" style="display: none;">
     <div class="nav-item" id="in">
       <p class="nav-item-title">index</p>
       <p class="nav-item-description">main page</p>
