--- a/account.html
+++ b/account.html
@@ -21,28 +21,42 @@
       <p>ma.</p>
       <p id="current-page" class="link"></p>
     </div>
-    <div onclick="">
+    <div>
       <i class="material-icons spinner link">
         settings
       </i>
+    <!-- expand_circle_down -->
     </div>
   </div>
   <div id="navigation" style="display: none;">
     <div class="nav-item" id="in">
       <p class="nav-item-title">index</p>
-      <p class="nav-item-description">main page</p>
+      <p class="nav-item-description" data-translate>main page</p>
     </div>
     <div class="nav-item" id="author">
       <p class="nav-item-title">author</p>
-      <p class="nav-item-description">about author</p>
+      <p class="nav-item-description" data-translate>about author</p>
     </div>
     <div class="nav-item" id="acc">
       <p class="nav-item-title">account</p>
-      <p class="nav-item-description">your account</p>
+      <p class="nav-item-description" data-translate>your account</p>
     </div>
   </div>
   <div id="settings-menu" class="noselect" style="display: none;">
-
+    <div class="settings-section">
+        <p class="settings-section-name" data-translate>General Settings</p>
+        <div class="setting">
+            <p id="theme" class="setting-name" data-translate>Theme:</p>
+            <p id="dark" class="setting-param" data-translate>Dark</p>
+            <p id="light" class="setting-param" data-translate>Light</p>
+            <p id="purple" class="setting-param" data-translate>Purple</p>
+        </div>
+        <div class="setting">
+            <p id="lang" class="setting-name" data-translate>Language:</p>
+            <p id="en" class="setting-param" data-translate>English</p>
+            <p id="ru" class="setting-param" data-translate>Russian</p>
+        </div>
+    </div><br>
   </div>
 
   <div id="content">
