--- a/account.html
+++ b/account.html
@@ -50,6 +50,7 @@
             <p id="dark" class="setting-param" data-translate>Dark</p>
             <p id="light" class="setting-param" data-translate>Light</p>
             <p id="purple" class="setting-param" data-translate>Purple</p>
+            <p id="ocean" class="setting-param" data-translate>Ocean</p>
         </div>
         <div class="setting">
             <p id="lang" class="setting-name" data-translate>Language:</p>
@@ -63,7 +64,7 @@
     <p style="font-size: 50vw; text-align: center;">acc</p>
   </div>
 
-  <script src="src/bundle.js"></script>
   <script src="src/main.js"></script>
+  <script src="src/bundle.js"></script>
 </body>
 </html>
