--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
 ma, ma., madot, ma dot, ma_dot, makak, ma kak, makaksi, ma kak si, ma.kak.si, 
 mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
 
-  <link rel="icon" type="image/png" href="src/img/ma-icon.png">
+  <link rel="icon" type="image/png" href="src/imgs/ma-icon.png">
   <link rel="stylesheet" href="src/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
