--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <p class="settings-section-name" data-translate>General Settings</p>
         <div class="setting">
             <p id="theme" class="setting-name" data-translate>Theme:</p>
-            <p id="dark" class="setting-param" data-translate>Dark</p>
+            <p id="dark" class="setting-param current" data-translate>Dark</p>
             <p id="light" class="setting-param" data-translate>Light</p>
             <p id="purple" class="setting-param" data-translate>Purple</p>
             <p id="ocean" class="setting-param" data-translate>Ocean</p>
         </div>
         <div class="setting">
             <p id="lang" class="setting-name" data-translate>Language:</p>
-            <p id="en" class="setting-param" data-translate>English</p>
+            <p id="en" class="setting-param current" data-translate>English</p>
             <p id="ru" class="setting-param" data-translate>Russian</p>
         </div>
     </div><br>
     <form action="javascript:;" onsubmit="report(msg.value);">
       <i class="material-icons spinner">report</i>
-      <p>Report a problem: </p>
+      <p data-translate>Report a problem:</p>
       <input type="text" name="msg" id="msg" required>
     </form><br>
   </div>
